--- a/android/assets/config/GameConfig.json
+++ b/android/assets/config/GameConfig.json
@@ -4,7 +4,12 @@
   "isDebugDraw": "false",
   "WORLD_WIDTH": "1024",
   "WORLD_HEIGHT": "720",
-  "keyPause": "P"
+  "keyPause": "P",
+  "test": {
+    "time": "5.12",
+    "name": "Asteroid_fixMaxAsteroid",
+    "count": "4"
+  }
 
 
 }
